--- a/package.json
+++ b/package.json
@@ -12,6 +12,22 @@
     "dependencies": {
         "stackframe": "~0.1.0"
     },
+    "devDependencies": {
+        "colors": "~1.0.3",
+        "coveralls": "^2.11.2",
+        "jasmine-node": "~1.14",
+        "jshint": "^2.5.6",
+        "karma": "~0.12",
+        "karma-chrome-launcher": "^0.1.5",
+        "karma-coverage": "^0.2.6",
+        "karma-firefox-launcher": "^0.1.3",
+        "karma-ie-launcher": "^0.1.5",
+        "karma-jasmine": "^0.1.5",
+        "karma-opera-launcher": "^0.1.0",
+        "karma-phantomjs-launcher": "^0.1.4",
+        "karma-safari-launcher": "^0.1.1",
+        "karma-sauce-launcher": "^0.2.10"
+    },
     "bugs": {
         "url": "https://github.com/stacktracejs/stack-generator/issues"
     },
@@ -21,6 +37,6 @@
     }],
     "main": "./stack-generator.js",
     "scripts": {
-        "test": "make jstd"
+        "test": "make test"
     }
 }
