--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
     "name": "stack-generator",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "main": "./stack-generator.js",
     "homepage": "https://github.com/stacktracejs/stack-generator.js",
     "authors": [
-        "Eric Wendelin <me@eriwen.com> (http://www.eriwen.com)"
+        "Eric Wendelin <me@eriwen.com> (http://www.eriwen.com)",
+        "Victor Homyakov <vkhomyackov@gmail.com> (https://github.com/victor-homyakov)"
     ],
     "description": "Generate artificial backtrace by walking arguments.callee.caller chain",
     "dependencies": {
-        "stackframe": "~0.1.0"
+        "stackframe": "~0"
     },
     "moduleType": [
         "amd",
@@ -28,7 +29,6 @@
     "ignore": [
         "**/.*",
         "node_modules",
-        "bower_components",
         "spec"
     ]
 }
