--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "name": "stack-generator",
     "description": "Generate artificial backtrace by walking arguments.callee.caller chain",
-    "author": "Eric Wendelin <me@eriwen.com> (http://eriwen.com)",
-    "version": "0.1.0",
+    "maintainers": [
+        "Eric Wendelin <me@eriwen.com> (http://www.eriwen.com)",
+        "Victor Homyakov <vkhomyackov@gmail.com> (https://github.com/victor-homyakov)"
+    ],
+    "version": "1.0.0",
     "keywords": ["stacktrace", "error"],
     "homepage": "http://www.stacktracejs.com",
     "repository": {
@@ -10,7 +13,7 @@
         "url": "git://github.com/stacktracejs/stack-generator.git"
     },
     "dependencies": {
-        "stackframe": "~0.1.0"
+        "stackframe": "~0"
     },
     "devDependencies": {
         "colors": "~1.0.3",
