--- a/.jshintrc
+++ b/.jshintrc
@@ -12,6 +12,7 @@
     "immed": true,
     "browser": true,
     "es3": true,
+    "evil": true,
     "camelcase": true,
     "nonbsp": true,
     "freeze": true,
@@ -33,6 +34,8 @@
         "autoWatch": true,
         "reporters": true,
         "port": true,
+        "StackFrame": false,
+        "StackGenerator": false,
         "JASMINE": true,
         "JASMINE_ADAPTER": true,
         "matchers": true,
