--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
         "error",
         "debugger"
     ],
-    "license": "Public Domain",
+    "license": "Unlicense",
     "ignore": [
         "**/.*",
         "node_modules",
