Fix PR testing on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ addons:
 before_script:
 - npm install
 script:
-- if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then gulp ci; else gulp pr; fi
+- if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then gulp ci; else gulp test-pr; fi
