--- a/package.json
+++ b/package.json
@@ -18,40 +18,41 @@
     "url": "git://github.com/stacktracejs/stack-generator.git"
   },
   "dependencies": {
-    "stackframe": "^1.0.3"
+    "stackframe": "^1.0.4"
   },
   "devDependencies": {
     "colors": "^1.1.2",
-    "del": "^2.2.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-coveralls": "^0.1.4",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
+    "gulp-sourcemaps": "^1.12.0",
+    "gulp-uglify": "^1.5.4",
+    "jasmine": "^2.7.0",
+    "jasmine-core": "^2.7.0",
     "jscs": "^2.9.0",
-    "jshint": "^2.8.0",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-coverage": "^0.5.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-opera-launcher": "^0.3.0",
-    "karma-phantomjs2-launcher": "^0.4.0",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.14",
-    "karma-spec-reporter": "0.0.23",
-    "run-sequence": "^1.1.5"
+    "jshint": "^2.9.5",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-phantomjs2-launcher": "^0.5.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.1.0",
+    "karma-spec-reporter": "^0.0.31",
+    "run-sequence": "^1.2.2"
   },
   "bugs": {
     "url": "https://github.com/stacktracejs/stack-generator/issues"
   },
   "main": "./stack-generator.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "prepublish": "gulp dist"
   }
 }
