--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 sudo: required
 dist: trusty
-node_js: stable
+node_js:
+ - 8
 addons:
   sauce_connect: true
   firefox: latest
@@ -10,6 +11,10 @@ addons:
     - google-chrome
     packages:
     - google-chrome-stable
+before_install:
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 before_script:
 - npm install
 script:
