--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,6 +13,10 @@ globals:
   StackGenerator: false
 parserOptions:
   ecmaVersion: 5
+ignorePatterns:
+  - 'coverage/**'
+  - 'dist/**'
+  - '**/*.ts'
 rules:
   indent:
     - error
