--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git://github.com/stacktracejs/stack-generator.git"
   },
   "dependencies": {
-    "stackframe": "^1.3.0"
+    "stackframe": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "^8.17.0",
@@ -43,6 +43,14 @@
     "url": "https://github.com/stacktracejs/stack-generator/issues"
   },
   "main": "./stack-generator.js",
+  "typings": "./stack-generator.d.js",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "stack-generator.js",
+    "stack-generator.d.ts",
+    "dist/"
+  ],
   "scripts": {
     "lint": "eslint --fix stack-generator.js spec/",
     "test": "karma start karma.conf.js --single-run",
